testimonial image added

--- a/index.html
+++ b/index.html
@@ -793,9 +793,7 @@
       </div>
       <ul class="fz_testimonial_items">
         <li class="fz_testimonial_item">
-          <img class="img"
-            src="https://images.pexels.com/photos/1710352/pexels-photo-1710352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-            alt="">
+          <img class="img" src="./assets/images/testimonial_1.svg" alt="Edward Johnson">
           <div class="fz_testimonial_item_content">
             <h3>Edward Johnson</h3>
             <p>Using this fintech platform has revolutionized how I manage my finances. It's intuitive, secure, and has
@@ -803,9 +801,7 @@
           </div>
         </li>
         <li class="fz_testimonial_item">
-          <img class="img"
-            src="https://images.pexels.com/photos/1710352/pexels-photo-1710352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-            alt="">
+          <img class="img" src="./assets/images/testimonial_2.svg" alt="Emma">
 
           <div class="fz_testimonial_item_content">
             <h3>Emma</h3>
@@ -814,7 +810,7 @@
           </div>
         </li>
         <li class="fz_testimonial_item active">
-          <img class="img" src="./assets/images/tom.svg" alt="tom">
+          <img class="img" src="./assets/images/testimonial_3.svg" alt="tom">
           <div class="fz_testimonial_item_content">
             <h3>Tom</h3>
             <p>The fraud detection features offered by Finzor are top-notch. I feel more secure knowing my assets are
@@ -822,9 +818,7 @@
           </div>
         </li>
         <li class="fz_testimonial_item">
-          <img class="img"
-            src="https://images.pexels.com/photos/1610995/pexels-photo-1610995.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-            alt="">
+          <img class="img" src="./assets/images/testimonial_4.svg" alt="John">
           <div class="fz_testimonial_item_content">
             <h3>John</h3>
             <p>From transaction settlements to reporting, this service covers all aspects flawlessly. It's a one-stop
@@ -832,9 +826,7 @@
           </div>
         </li>
         <li class="fz_testimonial_item">
-          <img class="img"
-            src="https://images.pexels.com/photos/1726775/pexels-photo-1726775.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
-            alt="">
+          <img class="img" src="./assets/images/testimonial_5.svg" alt="Sam">
           <div class="fz_testimonial_item_content">
             <h3>Sam</h3>
             <p>The analytics provided by this fintech platform have given me invaluable insights into my spending
@@ -842,11 +834,9 @@
           </div>
         </li>
         <li class="fz_testimonial_item">
-          <img class="img"
-            src="https://images.pexels.com/photos/9574383/pexels-photo-9574383.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
-            alt="">
+          <img class="img" src="./assets/images/testimonial_6.svg" alt="aravind">
           <div class="fz_testimonial_item_content">
-            <h3>aravind</h3>
+            <h3>Aravind</h3>
             <p> can't imagine my financial routine without the user-friendly interface of this solution. It's like
               having a personal finance assistant guiding me towards better management</p>
           </div>
