--- a/index.html
+++ b/index.html
@@ -1410,12 +1410,12 @@
         <!-- Newsletter -->
         <section class="newsletter_section">
           <div class="container">
-              <h3>Subscribe Newsletter</h3>
-              <h5>& latest Update of Company</h5>
+              <h3>Interested to collaborate?</h3>
+              <h5>Let's connect.</h5>
               <div class="input-group input-group-lg mb-3">
                   <input type="text" class="form-control" placeholder="Enter email address
                   " aria-label="Username" aria-describedby="basic-addon1">
-                  <button class="btn" type="button" id="button-addon2">Subscribe</button>
+                  <button class="btn" type="button" id="button-addon2">Submit</button>
                 </div>
           </div>
         </section>
@@ -1425,8 +1425,13 @@
                   <div class="row">
                       <div class="col-lg-7">
                           <div class="play_store_left">
-                              <h2>Are you ready to <br> start?</h2>
-                              <p>Personalize your settings, follow your progress, archive your</br> highlights and notes automatically Glose is the ultimate reading </p>
+                              <h2>Discover our app</h2>
+                              <ul>
+                                <li>Access Anytime, Anywhere</li>
+                                <li>Engaging Interactive Dashboard</li>
+                                <li>Streamlined Convenience</li>
+                              </ul>
+                              <p>Our mobile solution is designed to elevate user convenience, enabling real-time financial management and offering a personalized, easy-to-use experience.</p>
                               <div class="store_images">
                                  <img src="./assets/images/play_store.svg" alt="">
                                  <img src="./assets/images/appstore.svg" alt="">
