playstore section minor design changes

--- a/index.html
+++ b/index.html
@@ -1514,20 +1514,21 @@
                                 <li>Streamlined Convenience</li>
                               </ul>
                               <p>Our mobile solution is designed to elevate user convenience, enabling real-time financial management and offering a personalized, easy-to-use experience.</p>
+                              <div class="start_now_btn">
+                                <div class="hover-box">
+                                    <a class="dedcription-btn" href="#">
+                                      <span class="name-descripeion">Download Now</span>
+                                      <!-- <div class="btn-icon">
+                                        <img src="./assets/images/appstore_arrow.svg" alt=""> 
+                                      </div> -->
+                                    </a>
+                                </div>
+                            </div>
                               <div class="store_images">
                                  <img src="./assets/images/play_store.svg" alt="">
                                  <img src="./assets/images/appstore.svg" alt="">
                               </div>
-                              <div class="start_now_btn">
-                                  <div class="hover-box">
-                                      <a class="dedcription-btn" href="#">
-                                        <span class="name-descripeion">Download Now</span>
-                                        <div class="btn-icon">
-                                          <img src="./assets/images/appstore_arrow.svg" alt=""> 
-                                        </div>
-                                      </a>
-                                  </div>
-                              </div>
+                              
                           </div>
                       </div>
                       <div class="col-lg-5">
