--- a/index.html
+++ b/index.html
@@ -383,9 +383,10 @@
                     <h3>Discover the key to your fintech Future </h3>
                     <img src="assets/images/core-nexus.svg" alt="corenexus"/>
                     <div class="fz_box">
-                      <div></div>
-                      <div></div>
-                      <div></div>
+                      <div><img src="/assets/images/intro_icon2.svg" alt="introIcon"/></div>
+                      <div><img src="/assets/images/intro_icon1.svg" alt="introIcon"/></div>
+                      <div><img src="/assets/images/intro_icon3.svg" alt="introIcon"/></div>
+                      <div><img src="/assets/images/intro_icon4.svg" alt="introIcon"/></div>
                     </div>
                   </div>
                 </div>
