--- a/index.html
+++ b/index.html
@@ -383,9 +383,10 @@
                     <h3>Discover the key to your fintech Future </h3>
                     <img src="assets/images/core-nexus.svg" alt="corenexus"/>
                     <div class="fz_box">
-                      <div></div>
-                      <div></div>
-                      <div></div>
+                      <div><img src="/assets/images/intro_icon2.svg" alt="introIcon"/></div>
+                      <div><img src="/assets/images/intro_icon1.svg" alt="introIcon"/></div>
+                      <div><img src="/assets/images/intro_icon3.svg" alt="introIcon"/></div>
+                      <div><img src="/assets/images/intro_icon4.svg" alt="introIcon"/></div>
                     </div>
                   </div>
                 </div>
@@ -1334,10 +1335,10 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Integrated Workflow Scheduler</h5>
-                  <p class="card-text">
+                  <p class="card-text collapsible">
                     Integrate a robust scheduler within the CBS to automate processes like report generation and account maintenance at desired frequencies. This enhances efficiency, streamlines workflows, and ensures timely execution without manual intervention.
                   </p>
-                  <button type="button">Read more</button>
+                  <button type="button" class="read-more-btn">Read more</button>
                 </div>
               </div>
               <!-- Card 2 -->
@@ -1349,10 +1350,10 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Multi-Factor Authentication</h5>
-                  <p class="card-text">
+                  <p class="card-text collapsible">
                     We offer robust security solutions with OTP delivery via SMS, offline OTP generation through a mobile app, biometric authentication (fingerprint/face), and text-based challenges to protect against bots. Our multi-layered approach ensures top-tier user authentication and data security.
                   </p>
-                  <button type="button">Read more</button>
+                  <button type="button" class="read-more-btn">Read more</button>
                 </div>
               </div>
               <!-- Card 3 -->
@@ -1364,10 +1365,10 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Scalable Licensing and Smart Usage</h5>
-                  <p class="card-text">
+                  <p class="card-text collapsible">
                     Finzor provides a scalable licensing system for CBS, dynamically adjusting based on user activity—covering users, transactions, customers, and branches. It supports prepaid and postpaid models with license expiry, ensuring cost-effective, usage-based pricing.
                   </p>
-                  <button type="button">Read more</button>
+                  <button type="button" class="read-more-btn">Read more</button>
                 </div>
               </div>
               <!-- Card 4 -->
@@ -1380,11 +1381,11 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Data protection & Fraud prevention</h5>
-                  <p class="card-text">
+                  <p class="card-text collapsible">
                     Fortifying financial systems with robust security and proactive AML strategies to combat fraud and prevent money laundering
                   </p>
                   <!-- <button type="button">Read More</button> -->
-                  <button type="button">Read more</button>
+                  <button type="button" class="read-more-btn">Read more</button>
                 </div>
               </div>
             </div>
@@ -1850,7 +1851,7 @@
           margin: 32, /* Adds spacing between cards */
           nav: true, /* Shows previous and next arrows */
           dots: false,
-          autoplay: true,
+          autoplay: false,
           smartSpeed: 2000,
           center:true,
           autoplayTimeout: 4000,
