--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
                             <!-- <dotlottie-player src="https://lottie.host/806d5cd0-e468-4e6f-be32-6d8483fcf675/IbbWORgAvg.json"
                             background="#fff" speed="1" style="width: 378px; height: 275px" loop
                             autoplay></dotlottie-player> -->
-                            <canvas id="fea1" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                            <canvas id="fea1" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                             <script type="module">
                               import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1251,13 +1251,14 @@
                               <h3>AI Tools</h3>
                               <p>Enhance CX, efficiency, and security via automation, predictive analytics, and fraud detection.</p>
                               <a href="#">Read More</a>
+                              <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon1.svg" alt="arrow"></div>
                             </div>
                           </div>
                           <div class="item-pay">
                             <!-- <img src="assets/images/feature2.svg"> -->
                             <!-- <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
                             <dotlottie-player src="https://lottie.host/6ba62747-0a9b-4dfc-a8f7-5032371284ff/uHp0mxQ2oD.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player> -->
-                            <canvas id="fea2" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                            <canvas id="fea2" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                                 <script type="module">
                                   import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1272,13 +1273,14 @@
                               <h3>Payments</h3>
                               <p>Complete payments lifecycle with Cloud-Native, XAI, API-enabled, and end-to-end payment tech.</p>
                               <a href="#">Read More</a>
+                              <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon2.svg" alt="arrow"></div>
                             </div>
                           </div>
                           <div class="item-pay">
                             <!-- <img src="assets/images/feature3.svg"> -->
                             <!-- <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
                             <dotlottie-player src="https://lottie.host/80e91db7-e913-40b6-80ec-601e25c56dbe/ZTERmF3AI2.lottie" background="transparent" speed="1" style="width: 100%; height: 270px" loop autoplay></dotlottie-player> -->
-                            <canvas id="fea3" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                            <canvas id="fea3" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                             <script type="module">
                               import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1293,6 +1295,7 @@
                               <h3>Cloud Based Solutions</h3>
                               <p>Scalable, secure, cost-efficient CBS with disaster recovery and multi-tenant support.</p>
                               <a href="#">Read More</a>
+                              <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/core-icon3.svg" alt="arrow"></div>
                             </div>
                           </div>
                         </div>
@@ -1364,7 +1367,7 @@
                           <!-- <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
                           <dotlottie-player src="https://lottie.host/de67f05c-bb28-484e-8a74-3aabf011b36f/lOFmcsV7mA.lottie" background="transparent" speed="1" style="width: 100%; height: 270px" loop autoplay></dotlottie-player> -->
                           <!-- <img src="assets/images/feature1.svg"> -->
-                          <canvas id="fea4" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea4" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                           <script type="module">
                             import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1379,13 +1382,14 @@
                             <h3>High Scalability</h3>
                             <p>Ensures reliable payments with optimized infrastructure, cloud tech, and seamless transactions.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon1.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
                           <!-- <img src="assets/images/fin-fea1.svg"> -->
                           <!-- <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
                           <dotlottie-player src="https://lottie.host/6ba62747-0a9b-4dfc-a8f7-5032371284ff/uHp0mxQ2oD.lottie" background="transparent" speed="1" style="width: 100%; height: 270px" loop autoplay></dotlottie-player> -->
-                          <canvas id="fea5" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea5" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                             <script type="module">
                               import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1400,11 +1404,12 @@
                             <h3>Fraud Prevention</h3>
                             <p>AI-driven fraud detection ensures secure transactions, anomaly alerts, and advanced tools.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon2.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature3.svg"> -->
-                          <canvas id="fea6" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea6" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                           <script type="module">
                             import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1419,6 +1424,7 @@
                             <h3>Developer-Friendly APIs</h3>
                             <p>Easy APIs for seamless payment integration, supported by docs, SDKs, and customization tools.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/payment-icon3.svg" alt="arrow"></div>
                           </div>
                         </div>
                       </div>
@@ -1431,7 +1437,7 @@
                       <div class="fz-tab-card">
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature1.svg"> -->
-                          <canvas id="fea7" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea7" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                             <script type="module">
                               import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1446,13 +1452,14 @@
                             <h3>Multichannel Banking</h3>
                             <p>Access banking across platforms with consistent and unified user experiences.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon1.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature2.svg"> -->
                           <!-- <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
                           <dotlottie-player src="https://lottie.host/de67f05c-bb28-484e-8a74-3aabf011b36f/lOFmcsV7mA.lottie" background="transparent" speed="1" style="width: 100%; height: 270px" loop autoplay></dotlottie-player> -->
-                            <canvas id="fea8" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                            <canvas id="fea8" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                             <script type="module">
                               import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1467,11 +1474,12 @@
                             <h3>Smart Insights & Alerts</h3>
                             <p>AI analyzes spending, gives savings advice, and offers instant transaction and balance alerts.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon2.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature3.svg"> -->
-                          <canvas id="fea9" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea9" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                           <script type="module">
                             import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1486,6 +1494,7 @@
                             <h3>Round-the-Clock Support</h3>
                             <p>24/7 customer support via chatbots and live agents for quick issue resolution.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/neo-icon3.svg" alt="arrow"></div>
                           </div>
                         </div>
                       </div>
@@ -1498,7 +1507,7 @@
                       <div class="fz-tab-card">
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature1.svg"> -->
-                          <canvas id="fea10" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea10" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                           <script type="module">
                             import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1513,11 +1522,12 @@
                             <h3>Interbank Instant Transfers</h3>
                             <p>Real-time UPI transfers eliminate delays, ensuring fast and secure payments.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon1.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature2.svg"> -->
-                          <canvas id="fea11" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea11" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                           <script type="module">
                             import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1532,11 +1542,12 @@
                             <h3>QR Scan & Pay</h3>
                             <p>Simple QR-based payments allow instant, secure UPI transactions for merchants and customers.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon2.svg" alt="arrow"></div>
                           </div>
                         </div>
                         <div class="item-pay">
                           <!-- <img src="assets/images/feature3.svg"> -->
-                          <canvas id="fea12" width="374px" height="270px" style="width: 100%; height: 270px;"></canvas>
+                          <canvas id="fea12" width="374px" height="270px" style="width: 100%; height: 240px;"></canvas>
                           <script type="module">
                             import { DotLottie } from "https://cdn.jsdelivr.net/npm/@lottiefiles/dotlottie-web/+esm";
 
@@ -1551,6 +1562,7 @@
                             <h3>Scheduled Payments</h3>
                             <p>Automate bills, loans, and subscriptions to ensure hassle-free payments and manage cash flow.</p>
                             <a href="#">Read More</a>
+                            <div><img src="assets/images/arrow.svg" alt="arrow"><img src="assets/images/upi-icon3.svg" alt="arrow"></div>
                           </div>
                         </div>
                       </div>
