Finzor services carousel aligments fixes completed

--- a/index.html
+++ b/index.html
@@ -1669,10 +1669,10 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Integrated Workflow Scheduler</h5>
-                  <p class="card-text collapsible">
+                  <p class="card-text">
                     Integrate a robust scheduler within the CBS to automate processes like report generation and account maintenance at desired frequencies. This enhances efficiency, streamlines workflows, and ensures timely execution without manual intervention.
                   </p>
-                  <button type="button" class="read-more-btn">Read more</button>
+                  <!-- <button type="button" class="read-more-btn">Read more</button> -->
                 </div>
               </div>
               <!-- Card 2 -->
@@ -1684,10 +1684,10 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Multi-Factor Authentication</h5>
-                  <p class="card-text collapsible">
+                  <p class="card-text">
                     We offer robust security solutions with OTP delivery via SMS, offline OTP generation through a mobile app, biometric authentication (fingerprint/face), and text-based challenges to protect against bots. Our multi-layered approach ensures top-tier user authentication and data security.
                   </p>
-                  <button type="button" class="read-more-btn">Read more</button>
+                  <!-- <button type="button" class="read-more-btn">Read more</button> -->
                 </div>
               </div>
               <!-- Card 3 -->
@@ -1699,10 +1699,10 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Scalable Licensing and Smart Usage</h5>
-                  <p class="card-text collapsible">
+                  <p class="card-text">
                     Finzor provides a scalable licensing system for CBS, dynamically adjusting based on user activity—covering users, transactions, customers, and branches. It supports prepaid and postpaid models with license expiry, ensuring cost-effective, usage-based pricing.
                   </p>
-                  <button type="button" class="read-more-btn">Read more</button>
+                  <!-- <button type="button" class="read-more-btn">Read more</button> -->
                 </div>
               </div>
               <!-- Card 4 -->
@@ -1715,11 +1715,11 @@
                     <p>20/08/2024</p>
                   </div> -->
                   <h5 class="card-title">Data protection & Fraud prevention</h5>
-                  <p class="card-text collapsible">
+                  <p class="card-text">
                     Fortifying financial systems with robust security and proactive AML strategies to combat fraud and prevent money laundering
                   </p>
                   <!-- <button type="button">Read More</button> -->
-                  <button type="button" class="read-more-btn">Read more</button>
+                  <!-- <button type="button" class="read-more-btn">Read more</button> -->
                 </div>
               </div>
             </div>
