Finzor mobile bank product name changed

--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@
                 </div>
               </div>
               <div class="col-lg-6 fz_mobile_text_left">
-                <h2>BankZor</h2>
+                <h2>Zorion</h2>
                 <p class="fz_sub_title">Built for Next-Gen Leaders</p>
                 <p class="fz_description"><span><img src="assets/images/finance-icon.svg" alt="Mobile" /></span>The unified
                   app designed exclusively
